# Cold_start_addverb

./: FLOWCHART.md  INTEGRATION_GUIDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
archive/v1/: README.md
archive/v1/cold_start_aliasing/: cold_start_results.json  cold_start_v2.py  cold_start_v2_results.json
archive/v1/ros_integration/: amcl_hook_example.py  iogita_zone_node.py  warehouse_config.yaml
archive/v2_flat/: CHANGELOG.md  Dockerfile  lab_demo.py  pyproject.toml  requirements-dev.txt
archive/v2_flat/cold_start_aliasing/: ENDPOINTS_COLD_START.md  __init__.py  cold_start_demo.py  cold_start_v2_addverb.py
archive/v2_flat/debug/: __init__.py
archive/v2_flat/fleet_integration/: barcode_fallback_hook.py  shared_config.py
archive/v2_flat/sg_engine/: __init__.py  atlas.py
archive/v2_flat/sg_engine_locked/: __init__.py
archive/v2_flat/tests/: __init__.py
cold_start_aliasing/: ENDPOINTS_COLD_START.md  cold_start_demo.py  cold_start_v2_results.json
debug/: fleet_debug_node.py  iogita_diagnostics.py  ros2_debug_node.py  ros_debug_node.py
fleet/: .gitignore  INTEGRATION_GUIDE.md  README.md
fleet/cold_start_aliasing/: cold_start_results.json
fleet/fleet_integration/: __init__.py  fms_adapter.py  fms_adapter_async.py  warehouse_config.yaml
fleet/tests/: test_barcode_fallback.py  test_structured_logger.py
fleet_integration/: fms_adapter.py  iogita_zone_node.py  shared_config.py  structured_logger.py  warehouse_config.yaml
lab/: INTEGRATION_GUIDE.md  README.md  lab_config.yaml  lab_demo.py
ros2_integration/: amcl_hook_example.py  iogita_zone_node.py
sg_engine/: __init__.py  network.py
sg_engine_locked/: __init__.py
tests/: test_protocol_v1.py  test_zone_identifier.py
